# debug-poetry2nix-jupyter-core

./: flake.nix  pyproject.toml
